feat: add io.kestra.gradle.logger plugin
Opinionated build and test output for parallel multi-module CI builds,
replacing com.adarshr.test-logger. Two mechanisms, both on public
Gradle API only (no reflection into Gradle internals, after an earlier
OutputEventRenderer-based approach reliably deadlocked the client/daemon
shutdown handshake in testing):

- A [module:task] Started/outcome/duration line for every task, via
  BuildEventsListenerRegistry and each task's own doFirst.
- A full JUnit test renderer via Test.addTestListener/addTestOutputListener:
  quiet one-line passes, atomic multi-line failure blocks with full test
  coordinates on every line, colored durations, a heartbeat for tests
  still running past a threshold, and per-module peak JVM heap sampled
  from worker GC logs.

Also emits GitHub Actions ::error/::warning annotations and a
$GITHUB_STEP_SUMMARY table when running in Actions.